# zephyr

./: .codecov.yml  .gitignore  .gitlab-ci.yml  README.rst  quarantine.yaml  set-zephyr-build-env  west.yml
boards/arm/efm32pg_stk3402a/: Kconfig.defconfig  efm32pg_stk3402a.yaml  efm32pg_stk3402a_common.dtsi  efm32pg_stk3402a_defconfig
boards/arm/pets_v2_dev_kit/: Kconfig.board  Kconfig.defconfig  board.c  board.h  pets_v2_dev_kit.dts  pets_v2_dev_kit.yaml  pets_v2_dev_kit_defconfig
drivers/adc/: Kconfig.gecko
drivers/bluetooth/custom/: CMakeLists.txt  Kconfig
drivers/counter/: CMakeLists.txt  Kconfig.gecko  gecko_rtcc.c
drivers/flash/: spi_nor.c
drivers/i2c/: Kconfig.gecko  i2c_gecko.c
drivers/modem/: CMakeLists.txt  Kconfig  Kconfig.murata-1sc  Kconfig.murata_1sc  modem_cmd_handler.c  modem_context.h  modem_shell.c  modem_sms.h  modem_socket.h  murata-1sc.c  murata-1sc.h  strnstr.c  strnstr.h
drivers/modem/murata-1sc/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/cxd5605/: Kconfig  cxd5605.c  cxd5605.h
drivers/sensor/tmp108/: CMakeLists.txt  Kconfig  as621x_defs.h  tmp108.c  tmp108.h  tmp108_defs.h
drivers/sensor/tsl2540/: Kconfig  (+3 more)
drivers/serial/: CMakeLists.txt
drivers/spi/: spi_gecko.c
include/: device.h
include/ipc/: ipc_static_vrings.h
include/net/: net_if.h  socket.h  wifi_mgmt.h
include/sys/: fdtable.h
samples/thermometer/: CMakeLists.txt
samples/tmo_shell/: CMakeLists.txt  README.txt  prj.conf
subsys/pm/: device.c  device_runtime.c
subsys/shell/: shell_cmds.c  shell_help.c  shell_help.h
(+89 files in other folders)
